# scraper

./: .gitignore  .travis.yml  LICENSE  Makefile  NOTES.md  README.md  demo.json  llnl_config.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
app/: index.html
css/: style.css
js/: bar_graph.js  line_graph_json.js
requirements/: dev.txt  production.txt
scraper/: functions.py  gen_code_gov_json.py  util.py
scraper/azuredevops/: __init__.py  models.py
scraper/bitbucket/: __init__.py
scraper/code_gov/: __init__.py  doe.py  models.py
scraper/doecode/: __init__.py
scraper/github/: __init__.py  audit.py  graphql.py  graphqlNew.py  queryManager.py  testQ.gql  testVariables.gql  util.py
scraper/github/testQueries/: testPages.gql
scraper/gitlab/: __init__.py
scraper/tfs/: __init__.py  models.py
scripts/: clone_everything.py  codegov_compute_hours.py  get_stargazers.py  get_traffic.py  get_users_emails.py  get_year_commits.py  github_stats.py  my_repo.py  org_to_emails.py  stars.py
