[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llnl-scraper"
version = "0.16.0"
description = "Package for extracting software repository metadata"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Ian Lee", email = "lee1001@llnl.gov" }]
license = { text = "MIT" }
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "github3.py>=2.0.0",
    "msrest>=0.6.4",
    "python-dateutil>=2.7.3",
    "python-gitlab>=1.6.0",
    "pytz>=2017.3",
    "requests>=2.16",
    "setuptools>=24.2.0",
    "stashy>=0.3",
    "vsts>=0.1.25",
]

[project.urls]
Homepage = "https://github.com/llnl/scraper"

[project.scripts]
scraper = "scraper.gen_code_gov_json:main"

[project.optional-dependencies]
dev = [
    "ipython",
    "twine",
    "build",
    "bandit",
    "black",
    "flake8",
    "isort",
    "pyflakes",
    "safety",
]
